[tool.poetry]
name = "common-osint-model"
version = "0.3.4"
description = "Converting data from services like Censys and Shodan to a common data model."
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/3c7/common-osint-model"
repository = "https://github.com/3c7/common-osint-model"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "^4.3"
mmh3 = "^3.0.0"
cryptography = "^3.4.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
convshodan = "common_osint_model.cli:convshodan"
convcensys = "common_osint_model.cli:convcensys"
convcensyscert = "common_osint_model.cli:convcensyscert"
convcensys2 = "common_osint_model.cli:convcensys2"
convcert = "common_osint_model.cli:convcert"
